# Loops2

./: .gitignore  .gitmodules  CMakeLists.txt  readme.txt  vcpkg.json
source/application/: CMakeLists.txt  ReadMe.txt  list.txt
source/application/inc/: ApplicationController.h  CameraController.h  PlayerHandlerScript.h  SceneManagerScript.h
source/application/src/: ApplicationController.cpp  CameraController.cpp  SceneManagerScript.cpp  main.cpp
source/apps/beautifulGame/: CMakeLists.txt
source/apps/beautifulGame/inc/: ApplicationController.h  CameraController.h  SceneManagerScript.h
source/apps/beautifulGame/src/: CameraController.cpp  PlayerHandlerScript.cpp  SceneManagerScript.cpp  main.cpp
source/core/: CMakeLists.txt  list.txt
source/core/inc/: CoreManager.h  CorePrecompiled.h  LightCullSettings.h  PlatformSettings.h  RenderData.h  RendererSettings.h  Settings.h  Shader.h
source/core/inc/ECS/: Component.h  ComponentHandle.h  ComponentManager.h  ComponentMask.h  ECS_Helper.h  ECS_Setting.h  Entity.h  EntityHandle.h  EntityManager.h  EntityMap.h  SceneNode.h  System.h  UnitTest_ECS.h  World.h
source/core/inc/IO/: FileReader.h  ReadMe.txt
source/core/inc/Math/: BoundingBox.h  Cube.h  Frustum.h  MathUtil.h  Plane.h  Quad.h  Sphere.h  TangentCalculator.h
source/core/inc/Platform/: Assertion.h  PlatformManager.h
source/core/inc/Utility/: HashHelper.h  HashManager.h  PipelineStateWrappers.h  ResourceAllocationHelper.h  SceneLoader.h  ShaderResourceDescription.h  Timer.h
source/core/src/: CoreManager.cpp  RendererSettings.cpp  Settings.cpp
source/core/src/ECS/: Component.cpp  ComponentMask.cpp  ECS_Setting.cpp  EntityManager.cpp  EventBus.cpp  System.cpp  UnitTest_ECS.cpp  World.cpp
source/core/src/IO/: FileReader.cpp
source/core/src/Math/: BoundingBox.cpp  Frustum.cpp  MathUtil.cpp  Plane.cpp  ReadMe.txt
source/core/src/Platform/: Assertion.cpp  PlatformManager.cpp  ReadMe.txt
source/core/src/Reflection/: ReadMe.txt
source/core/src/Utility/: HashManager.cpp  PipelineStateWrappers.cpp  ReadMe.txt  RenderingWrapper.cpp  ResourceAllocationHelper.cpp  SceneLoader.cpp  Timer.cpp
source/engine/: CMakeLists.txt  list.txt
source/engine/inc/: EngineManager.h  SceneGraphManager.h  SceneLoader.h  SceneManager.h
source/engine/inc/ECS/: ECS_Manager.h  SceneManager.h
source/engine/src/: EngineManager.cpp  SceneLoader.cpp  SceneManager.cpp
source/engine/src/ECS/: ECS_Manager.cpp  SceneGraphManager.cpp  SceneManager.cpp
source/engineInterface/: CMakeLists.txt  EngineManager.cpp  EngineManager.h  SceneManager.cpp  SceneManager.h
source/engineInterface/ECS/: ECS_EngineManager.cpp  ECS_EngineManager.h
source/engineInterface/ECS/Systems/: CameraSystem.cpp  CameraSystem.h  LightSystem.cpp  LightSystem.h  MeshRendererSystem.cpp  MeshRendererSystem.h  ScriptableSystem.cpp  ScriptableSystem.h  TransformSystem.cpp  TransformSystem.h
source/engineInterface/inc/: EngineManager.h  SceneManager.h
source/engineInterface/inc/ECS/: ECS_Manager.h
source/engineInterface/src/: EngineManager.cpp  SceneManager.cpp
source/engineInterface/src/ECS/: ECS_Manager.cpp
source/graphics/: CMakeLists.txt
source/graphics/Drivers/DX12/: ReadMe.txt
source/graphics/Drivers/Vulkan/: CMakeLists.txt  PresentationEngine.cpp  PresentationEngine.h  ValidationManager.cpp  ValidationManager.h  VkAttachmentFactory.cpp  VkAttachmentFactory.h  VkCommandBufferFactory.cpp  VkCommandBufferFactory.h  VkDrawCommandBuffer.cpp  VkDrawCommandBuffer.h  VkFrameBufferFactory.cpp  VkFrameBufferFactory.h  VkQueueFactory.cpp  VkQueueFactory.h  VkRenderPassFactory.cpp  VkRenderPassFactory.h  VkSamplerFactory.cpp  VkSamplerFactory.h  VulkanManager.cpp  VulkanManager.h
source/graphics/Rendering/: CommandBufferManager.cpp  CommandBufferManager.h  DeferredInterface.h  DrawCommandBuffer.h  ForwardInterface.h  GraphicsManager.cpp  GraphicsManager.h  RenderingInterface.cpp  RenderingInterface.h  RenderingPrecompiled.cpp  RenderingPrecompiled.h  VulkanInterface.cpp  VulkanInterface.h
source/graphics/Rendering/Assets/: ReadMe.txt
source/graphics/Rendering/DrawGraph/: DeferredDrawGraph.h  DrawGraphManager.cpp  DrawGraphManager.h  DrawGraphNode.cpp  DrawGraphNode.h  ForwardDrawGraph.h  ReadMe.txt
source/graphics/Rendering/Effects/: ReadMe.txt
source/graphics/Rendering/GUI/: ReadMe.txt
source/graphics/Rendering/PipelineGraph/: GraphicsPipelineManager.cpp  GraphicsPipelineManager.h  PipelineNode.h
source/graphics/Rendering/Scenegraph/: ReadMe.txt  SceneGraphManager.cpp  SceneGraphManager.h
source/graphics/Rendering/Variables/: MaterialFactory.cpp  MaterialFactory.h  MeshFactory.cpp  MeshFactory.h  ReadMe.txt  ShaderFactory.cpp  ShaderFactory.h  TextureFactory.cpp  TextureFactory.h  UniformFactory.cpp  UniformFactory.h
source/graphics/Windowing/: InputEvents.h  InputManager.cpp  InputManager.h  InputManagerGLFW.cpp  MouseInputManager.cpp  MouseInputManager.h  WindowManager.cpp  WindowManager.h  Window_glfw.cpp
source/graphics/inc/: CommandReader.h  DxInterface.h  ForwardInterface.h  GraphicsManager.h  RendererSettings.h  RenderingManager.h  VulkanInterface.h
source/graphics/inc/renderGraph/: Effect.h  Graph.h  Pipeline.h  RenderGraphManager.h  RenderPass.h  Task.h  Technique.h  TechniqueNode.h
source/graphics/inc/resourceManagement/: BoundFactory.h  MaterialFactory.h  MeshFactory.h  Resource.h  ShaderResourceManager.h  UniformFactory.h
source/graphics/inc/shaderResource/: UniformFactory.h
source/graphics/inc/windowing/: InputEvents.h  InputManager.h  MouseInputManager.h  WindowManager.h
source/graphics/src/: CommandReader.cpp  GraphicsManager.cpp  RenderingManager.cpp  VulkanInterface.cpp
source/graphics/src/renderGraph/: Pipeline.cpp  RenderGraphManager.cpp  Technique.cpp
source/graphics/src/resourceManagement/: BoundFactory.cpp  MaterialFactory.cpp  MeshFactory.cpp  ShaderResourceManager.cpp  UniformFactory.cpp
source/graphics/src/shaderResource/: UniformFactory.cpp
source/graphics/src/windowing/: InputManager.cpp  (+4 more)
source/graphicsApi/vulkan/: CMakeLists.txt  ReadMe.txt
(+210 files in other folders)
